# fake_ollama

./: .env.example  .gitignore  README.md  config.json.example  pyproject.toml  requirements.txt
fake_ollama/: __init__.py  __main__.py  anthropic_client.py  config.py  converters.py  server.py
tests/: conftest.py  test_config.py  test_converters.py  test_integration.py  test_server.py
